@@ -1,0 +1,54 @@
+constants.o : kind.o
+crystal_io_base.o : ../iotk/iotk_16_module.o
+crystal_io.o : crystal_io_base.o
+crystal_io.o : ../iotk/iotk_16_module.o
+erf.o : kind.o
+error.o : io_global.o
+error.o : parallel_include.o
+etsf_error.o : io_global.o
+fft_scalar.o : kind.o
+files.o : io_global.o
+files.o : ../iotk/iotk_16_module.o
+files.o : mp.o
+files.o : parameters.o
+files.o : parser.o
+input_from_file.o : io_global.o
+input_from_file.o : mp.o
+io_global.o : ../iotk/iotk_16_module.o
+locate.o : kind.o
+mp_global.o : kind.o
+mp_global.o : parallel_include.o
+mp_global.o : shmem_include.o
+mp.o : io_global.o
+mp.o : kind.o
+mp.o : parallel_include.o
+parallel_include.o : kind.o
+parser.o : io_global.o
+parser.o : kind.o
+parser.o : mp_global.o
+parser.o : mp.o
+parser.o : parser_base.o
+qexml.o : ../iotk/iotk_16_module.o
+qexpt.o : constants.o
+qexpt.o : ../iotk/iotk_16_module.o
+qexpt.o : kind.o
+random_numbers.o : kind.o
+shmem_include.o : kind.o
+simpsn.o : kind.o
+sort.o : kind.o
+sph_bes.o : constants.o
+sph_bes.o : kind.o
+sph_har.o : constants.o
+sph_har.o : kind.o
+timing.o : io_global.o
+timing.o : kind.o
+timing.o : mp_global.o
+timing.o : mp.o
+util.o : constants.o
+util.o : kind.o
+warning.o : io_global.o
+write_header.o : io_global.o
+ylmr2.o : constants.o
+ylmr2.o : kind.o
+fft_scalar.o : ../include/fft_defs.h
+log_module.o : ../include/f_defs.h
